# avaudio-rs

./: CHANGELOG.md  COVERAGE.md  COVERAGE_AUDIT.md  COVERAGE_AUDIT_V2.md  Cargo.toml  README.md  build.rs
examples/: 01_smoke_surface.rs  02_mixer_node.rs  03_input_output_nodes.rs  04_environment_node.rs  05_unit_time_pitch.rs  06_unit_reverb.rs  07_unit_eq.rs  08_converter.rs  09_simple_player.rs  10_recorder.rs  11_session.rs  12_environment_node_chain.rs  13_format.rs  14_player_node.rs  15_audio_buffer.rs  16_unit_effect.rs  17_pcm_buffer.rs  18_input_node.rs  19_output_node.rs  20_audio_file.rs  21_audio_application.rs  22_source_sink_nodes.rs  23_sequencer.rs  24_unit_component.rs  25_unit_variants.rs  26_async_config_change.rs  27_async_player_completion.rs
examples/support/: mod.rs
src/: application.rs  async_api.rs  audio_file.rs  buffer.rs  channel_layout.rs  compressed_buffer.rs  connection_point.rs  converter.rs  engine.rs  environment_node.rs  error.rs  file.rs  format.rs  input_node.rs  input_output_node.rs  io_node.rs  lib.rs  mixer.rs  mixing.rs  music_event.rs  music_track.rs  node.rs  output_node.rs  pcm_buffer.rs  player.rs  recorder.rs  routing_arbiter.rs  sequencer.rs  session.rs  session_capability.rs  session_types.rs  settings.rs  simple_player.rs  sink_node.rs  source_node.rs  time.rs  types.rs  unit.rs  unit_component.rs  unit_delay.rs  (+11 more)
src/ffi/: mod.rs
swift-bridge/: Package.swift
swift-bridge/Sources/AVAudioBridge/: Application.swift  AsyncStream.swift  Buffer.swift  ChannelLayout.swift  CompressedBuffer.swift  ConnectionPoint.swift  Converter.swift  Core.swift  Engine.swift  EngineExt.swift  EnvironmentNode.swift  File.swift  Format.swift  IONode.swift  InputNode.swift  Mixer.swift  Mixing.swift  MusicTrack.swift  OutputNode.swift  PCMBuffer.swift  Player.swift  Recorder.swift  RoutingArbiter.swift  Sequencer.swift  Session.swift  SessionCapability.swift  Settings.swift  SimplePlayer.swift  SourceSinkNode.swift  Time.swift  UnitBase.swift  UnitComponent.swift  UnitDelay.swift  UnitDistortion.swift  UnitEQ.swift  (+8 more)
tests/: application_tests.rs  async_stream_tests.rs  audio_file_tests.rs  buffer_tests.rs  converter_tests.rs  engine_tests.rs  environment_node_tests.rs  file_tests.rs  format_tests.rs  foundation_wrappers_tests.rs  gap_closure_tests.rs  input_node_tests.rs  input_output_node_tests.rs  mixer_tests.rs  output_node_tests.rs  pcm_buffer_tests.rs  player_node_tests.rs  recorder_tests.rs  sequencer_tests.rs  session_tests.rs  settings_types_tests.rs  simple_player_tests.rs  source_sink_node_tests.rs  tap_buffer_stress.rs  unit_component_tests.rs  unit_effect_tests.rs  unit_eq_tests.rs  unit_reverb_tests.rs  unit_time_pitch_tests.rs  unit_variant_tests.rs
tests/common/: mod.rs
