[package]
name = "avaudio"
version = "0.4.0"
edition = "2021"
license = "MIT OR Apache-2.0"
homepage = "https://github.com/doom-fish/avaudio-rs"
repository = "https://github.com/doom-fish/avaudio-rs"
description = "Safe Rust bindings for Apple's AVFoundation audio graph, file, unit, player, recorder, and converter APIs on macOS"
authors = ["Per Johansson <per@doom.fish>"]
keywords = ["avaudio", "avaudioengine", "avaudiofile", "avfoundation", "macos"]
categories = ["multimedia::audio", "api-bindings", "os::macos-apis"]
rust-version = "1.76"
readme = "README.md"
build = "build.rs"
include = [
    "src/**/*",
    "swift-bridge/Package.swift",
    "swift-bridge/Sources/**/*",
    "examples/**/*",
    "tests/**/*",
    "build.rs",
    "Cargo.toml",
    "README.md",
    "LICENSE-*",
    "CHANGELOG.md",
    "COVERAGE.md",
]

[lints.rust]

[lints.clippy]
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
cargo = { level = "warn", priority = -1 }

[lib]
name = "avaudio"
crate-type = ["lib"]

[features]
default = []
async = []

[dependencies]
doom-fish-utils = { path = "../doom-fish-utils", version = ">=0.3, <0.4" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[dev-dependencies]
pollster = "0.3"

[package.metadata.docs.rs]
all-features = true
default-target = "aarch64-apple-darwin"
targets = ["aarch64-apple-darwin", "x86_64-apple-darwin"]
rustdoc-args = ["--cfg", "docsrs"]

[badges]
maintenance = { status = "actively-developed" }

[[example]]
name = "01_smoke_surface"

[[example]]
name = "02_mixer_node"

[[example]]
name = "03_input_output_nodes"

[[example]]
name = "04_environment_node"

[[example]]
name = "05_unit_time_pitch"

[[example]]
name = "06_unit_reverb"

[[example]]
name = "07_unit_eq"

[[example]]
name = "08_converter"

[[example]]
name = "09_simple_player"

[[example]]
name = "10_recorder"

[[example]]
name = "11_session"

[[example]]
name = "12_environment_node_chain"

[[example]]
name = "13_format"

[[example]]
name = "14_player_node"

[[example]]
name = "15_audio_buffer"

[[example]]
name = "16_unit_effect"

[[example]]
name = "17_pcm_buffer"

[[example]]
name = "18_input_node"

[[example]]
name = "19_output_node"

[[example]]
name = "20_audio_file"

[[example]]
name = "21_audio_application"

[[example]]
name = "22_source_sink_nodes"

[[example]]
name = "23_sequencer"

[[example]]
name = "24_unit_component"

[[example]]
name = "25_unit_variants"

[[example]]
name = "26_async_config_change"
required-features = ["async"]

[[example]]
name = "27_async_player_completion"
required-features = ["async"]

[profile.release]
debug = "full"
strip = "none"
